--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "starting_file",
-  "version": "1.0.0",
-  "description": "Wesh alors :)",
-  "main": "js.js",
+  "name": "cooking-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.0",
+    "sass": "^1.50.0",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
-    "sass" : "sass --watch ./main.scss:./style.css"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-    
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KobeKenjo/basic_project_file.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/KobeKenjo/basic_project_file/issues"
-  },
-  "homepage": "https://github.com/KobeKenjo/basic_project_file#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
